# cloud-starter

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  docs-fast-track.yml  feature.yml  spike.yml  sprint-plan.yml  story.yml  tech-debt.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  spike.md  tech_debt.md
.github/metrics/: .gitignore  README.md  generate_metrics.py  pr_lead_time_data.json  pr_lead_time_table.md  requirements.txt
.github/workflows/: add-to-project.yml  ci.yml  codeql.yml  pr-requires-issue.yml  pr-tests-required.yml  semantic-pr.yml  sprint-digest.yml  sprint-normalizer.yml  sprint-sync.yml  update-pr-metrics.yml
docs/: DoD.md  DoR.md  tags.md
docs/rca/: pr13-dup.md
issues/: 56.md
src/cloud_starter/: __init__.py  aws.py  cli.py  config.py
tests/: conftest.py  test_cli.py  test_cli_moto.py  test_config.py
