[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-starter"
description = "Learning project: minimal spin CLI with up|status|down (dry-run by default; live only with interlock)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marius Trovik" }]
keywords = ["cli", "aws", "learning", "cloud"]

# Boto is needed at import time because the CLI imports the aws module.
dependencies = ["boto3>=1.34", "botocore>=1.34"]

# Version comes from code
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
cloud_starter = []

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spin = "cloud_starter.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "moto[boto3]>=5"
]
